Fix overlapping when there's no news

--- a/theme/sass/site/primary/_home.scss
+++ b/theme/sass/site/primary/_home.scss
@@ -45,3 +45,7 @@ body.home {
     a { font-weight: bold; text-decoration: none; }
   }
 }
+
+.home__upcoming-events__heading {
+  clear: right;
+}
